# rss-aggregator

./: README.md  config.toml  feeds.txt  master_feed.xml
.github/workflows/: build-release.yml  update-master-feed.yml
app/: .rustc_info.json  Cargo.toml
app/src/: main.rs
feeds/: ali-abdaal-c88aa20d.xml  andrew-kelley-450d0abd.xml  blog-on-tailscale-019cfa8d.xml  butler-s-log-bded4da1.xml  chaos-computer-club-updates-16fbf14c.xml  d-kriesel-0ee07af1.xml  deployor-s-blog-6fe7ff86.xml  drew-devault-s-blog-9d08f6f2.xml  elixir-blog-a75ec734.xml  elixir-lang-a75ec734.xml  graham-christensen-28c55b9a.xml  home-on-kay-singh-b3024700.xml  home-on-neovim-d7015c72.xml  https-elixir-lang-org-atom-xml-a75ec734.xml  jeff-geerling-4377cb53.xml  jeff-geerling-s-blog-4377cb53.xml  josh-comeau-newsletter-7bc5464d.xml  josh-comeau-s-blog-80a2bd45.xml  lifenotes-ali-abdaal-d80cb5c2.xml  luke-smith-s-webpage-on-luke-smith-4955b042.xml  mahad-kalam-15d05293.xml  master.opml  mitchell-hashimoto-c32a64d1.xml  neovim-d7015c72.xml  nixos-announcements-672f4576.xml  nixos-newsletters-363e2ed9.xml  nixos-stories-79207c6d.xml  notashelf-s-blog-ba026c21.xml  scottchacon-com-89f45469.xml  simon-willison-s-weblog-2b081550.xml  stories-by-scott-chacon-on-medium-a818863e.xml  the-erlangelist-8c9fc85d.xml  the-go-blog-7b5cbfb5.xml  the-pragmatic-engineer-942a0ad4.xml  vaxry-s-blog-735574d3.xml  wolfgang-s-blog-4e3e95ca.xml  xe-iaso-s-blog-2db0a4d1.xml  zig-devlog-e2d492f3.xml  ziglang-org-news-ae941de9.xml
