[package]
name = "rss-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
feed-rs = "2.3.1"
reqwest = "0.12.12"
rss = "2.0.12"
tokio = { version = "1.43.0", features = ["full"]  }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
quick-xml = "0.36"
